--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -1,5 +1,6 @@
 .calc-container {
-    background: red;  
+    display: flex;
+    flex-wrap: wrap;    
     width: 400px; 
     height: 500px; 
     border: 2px solid grey; 
