Fixed some paragraph styling

--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -19,6 +19,20 @@
     height: 278px; 
     width: 300px; 
     background-color: blue; 
+    display: flex; 
+    flex-direction: row; 
+    flex-wrap: wrap; 
+}
+
+.number-button {
+    width: 80px; 
+    height: 20px; 
+    border: 1px solid grey; 
+    padding: 20%;  
+}
+
+.nunmber-value {
+    font-size: 100px; 
 }
 
 .operators-container {
