--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -12,7 +12,8 @@
 .button-text {
     color: black; 
     text-align: center; 
-    font-size: 16px; 
+    font-size: 30px; 
+    padding-top: 5%; 
 }
 
 .numbers-container {
