--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -5,6 +5,9 @@
 .action-button {
     width: 300px; 
     height: 70px; 
+    font-size: 40px; 
+    text-align: center; 
+    padding-top: 3%; 
     background-color: white; 
     border: 2px solid gray; 
 }
